feat: implement menu service with new endpoint