@@ -1,10 +1,15 @@
 package id.ac.ui.cs.advprog.ohioorder.pesanan.client;
 
 import id.ac.ui.cs.advprog.ohioorder.pesanan.dto.MenuServiceResponse;
+import lombok.Getter;
+import lombok.Setter;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.core.ParameterizedTypeReference;
 import reactor.core.publisher.Mono;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.concurrent.CompletableFuture;
@@ -36,19 +41,12 @@ public class MenuServiceClient {
                 .toFuture();
     }
 
-    // Asynchronous method to verify a menu item exists
-    public CompletableFuture<Boolean> verifyMenuItemExistsAsync(String menuItemId) {
-        return getMenuItemAsync(menuItemId)
-                .thenApply(response -> true)
-                .exceptionally(ex -> false);
-    }
-
     // Fetch multiple menu items in parallel
     public CompletableFuture<List<MenuServiceResponse>> getMultipleMenuItemsAsync(List<String> menuItemIds) {
         List<CompletableFuture<MenuServiceResponse>> futures = 
             menuItemIds.stream()
                 .map(this::getMenuItemAsync)
-                .collect(Collectors.toList());
+                .toList();
         
         CompletableFuture<Void> allFutures = 
             CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
@@ -59,8 +57,32 @@ public class MenuServiceClient {
                 .collect(Collectors.toList())
         );
     }
-    
-    // Original sync method for backward compatibility
+
+    public CompletableFuture<Boolean> reduceMenuItemQuantityAsync(String menuItemId, int quantity) {
+        return webClient.put()
+                .uri("/api/menus/reduce/{id}", menuItemId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .bodyValue(new BigDecimal(quantity))
+                .retrieve()
+                .bodyToMono(new ParameterizedTypeReference<ApiResponse<Object>>() {})
+                .map(ApiResponse::isSuccess)
+                .onErrorResume(e -> {
+                    // Log error for debugging
+                    System.err.println("Error reducing quantity for menu item " + menuItemId + ": " + e.getMessage());
+                    return Mono.just(false);
+                })
+                .toFuture();
+    }
+
+    @Setter
+    @Getter
+    public static class ApiResponse<T> {
+        private boolean success;
+        private String message;
+        private T data;
+
+    }
+
     public MenuServiceResponse getMenuItem(String menuItemId) {
         try {
             return getMenuItemAsync(menuItemId).join();
@@ -69,15 +91,6 @@ public class MenuServiceClient {
                 throw (NoSuchElementException) e.getCause();
             }
             throw new RuntimeException("Error fetching menu item", e);
-        }
-    }
-
-    // Original sync method for backward compatibility
-    public boolean verifyMenuItemExists(String menuItemId) {
-        try {
-            return verifyMenuItemExistsAsync(menuItemId).join();
-        } catch (Exception e) {
-            return false;
         }
     }
 }
